--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<!-- java servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -92,5 +97,17 @@
 
 	<build>
 		<finalName>coseat_main</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+
 	</build>
 </project>
