--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,17 +6,22 @@
 	<display-name>Archetype Created Web Application</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:config/spring/context-*.xml</param-value>
+		<param-value>/WEB-INF/spring/context-datasource.xml
+			/WEB-INF/spring/context-mapper.xml
+			</param-value>
 	</context-param>
 	<servlet>
-		<servlet-name>gag</servlet-name>
-		<display-name>gag</display-name>
-		<description></description>
-		<servlet-class>gag</servlet-class>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/context-mapper.xml</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>gag</servlet-name>
-		<url-pattern>/gag</url-pattern>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
 </web-app>
 
